--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,19 @@
 // app global css in SCSS form
+input {
+  text-align: center;
+  font-size: large;
+}
+
+.pin-container {
+  width: 70%;
+  height: 30vh;
+  max-width: 45rem;
+  margin: 2rem auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.text-muted {
+  color: rgb(185, 185, 185);
+}
